--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "jest": "^29.7.0",
     "pg": "^8.13.1",
