--- a/backend/package.json
+++ b/backend/package.json
@@ -24,9 +24,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jest": "^29.7.0",
+    "joi": "^17.13.3",
     "pg": "^8.13.1",
     "typeorm": "^0.3.20"
   },
