--- a/backend/package.json
+++ b/backend/package.json
@@ -25,15 +25,19 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jest": "^29.7.0",
     "joi": "^17.13.3",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.2",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
