--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^7.0.2",
+    "react-scripts": "5.0.1",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,8 +41,12 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2"
   }
 }
